feat: adicionando como testar no readme

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -17,7 +17,7 @@
   <script src="index.controller.js"></script>
 </head>
 
-<body ng-app="test" ng-controller="IndexController">
+<body ng-app="test" ng-controller="IndexController as vm">
   <p>{{ hellowWorld }}</p>
 
 </body>
